--- a/mia/Views/Guide/HXGuideView.xib
+++ b/mia/Views/Guide/HXGuideView.xib
@@ -57,7 +57,7 @@
                                                 <constraint firstAttribute="width" secondItem="ruO-yX-TdU" secondAttribute="height" multiplier="575:997" id="ghV-Ij-82L"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="妙推一下，让好音乐被跟多的人听见" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTd-ri-9Gu">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="妙推一下，让好音乐被更多的人听见" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTd-ri-9Gu">
                                             <rect key="frame" x="24" y="502" width="272" height="21"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
